--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -37,6 +37,7 @@
             android:theme="@style/Hedvig.Theme" />
 
         <activity android:name=".feature.onboarding.OnboardingMockActivity" />
+        <activity android:name=".feature.genericauth.GenericAuthMockActivity" />
 
         <activity
             android:name=".feature.chat.ChatMockActivity"
