--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -314,6 +314,7 @@
 
         <activity
             android:name=".feature.genericauth.otpinput.OtpInputActivity"
+            android:exported="true"
             android:windowSoftInputMode="adjustResize"/>
 
         <meta-data
