APP-751: Insurely, SSN Input (#809)
* Add intro screen for insurely

* Pass selected insurance provider name to AskForPriceActivity

* Add feature flag

* Remove view model and pass title as argument

* Register result listener and continue if canceled

* Add string resources

* Add screen with ssn input

* Rename field

* Refactor view state

* Add string resources

* Add use case for fetching bank id data

* Add tests for RetrievePriceViewModel. Refactor viewstate.

* Clean up

* Fix PR comments

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -304,10 +304,12 @@
 
         <activity android:name=".feature.offer.quotedetail.QuoteDetailActivity" />
 
-        <activity android:name=".feature.embark.passages.previousinsurer.askforprice.AskForPriceInfoActivity" />
         <activity android:name=".feature.crossselling.ui.detail.CrossSellDetailActivity" />
         <activity android:name=".feature.crossselling.ui.detail.CrossSellFaqActivity" />
         <activity android:name=".feature.sunsetting.ForceUpgradeActivity" />
+
+        <activity android:name=".feature.embark.passages.previousinsurer.askforprice.AskForPriceInfoActivity" />
+        <activity android:name=".feature.embark.passages.previousinsurer.retrieveprice.RetrievePriceInfoActivity" />
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
