APP-1039: Generic Auth, OTP Input (#807)
* Add otp input screens

* Add OTP input views, view model, use cases and queries.

* Add activity to manifest

* Add full screen progress when submitting otp

* Add title parameter for openEmail

* Start otp input screen after successful response from email input screen

* Show dialog for network errors. Tweak fullscreen progress.

* Extract interface to util package

* Add missing string resources. Disable resend code button while loading.

* Remove delays and exported activity.

* Remove generic auth for SE

* Fix openEmail

* Add extension function for getting error string resources in viewmodel. Refactor error dialog, show depending on viewstate and remove event.

* Fix PR comments

* Add viewmodel unit tests

* Refactor test and use dispatcher from MainCoroutineRule. Fix PR comments.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -313,6 +313,10 @@
 
         <activity android:name=".feature.embark.passages.previousinsurer.askforprice.AskForPriceInfoActivity" />
         <activity android:name=".feature.embark.passages.previousinsurer.retrieveprice.RetrievePriceInfoActivity" />
+        <activity
+            android:name=".feature.genericauth.otpinput.OtpInputActivity"
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize" />
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
@@ -366,6 +370,10 @@
         <intent>
             <action android:name="android.intent.action.VIEW" />
             <data android:scheme="https" />
+        </intent>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="mailto" />
         </intent>
     </queries>
 
