APP-1087: Create embark passage for external insurance (#811)
* Add fragment and viewModel for external insurance provider action. Add tests for viewModel.

* Fix PR comments

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -311,8 +311,10 @@
             android:name=".feature.genericauth.GenericAuthActivity"
             android:windowSoftInputMode="adjustResize" />
 
-        <activity android:name=".feature.embark.passages.previousinsurer.askforprice.AskForPriceInfoActivity" />
-        <activity android:name=".feature.embark.passages.previousinsurer.retrieveprice.RetrievePriceInfoActivity" />
+
+        <activity android:name=".feature.embark.passages.externalinsurer.askforprice.AskForPriceInfoActivity" />
+        <activity android:name=".feature.embark.passages.externalinsurer.retrieveprice.RetrievePriceInfoActivity" />
+
         <activity
             android:name=".feature.genericauth.otpinput.OtpInputActivity"
             android:exported="true"
