--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -217,7 +217,7 @@ jobs:
           ktlint "\!**/generated/**" "**/src/**/*.kt*" --reporter=checkstyle,output=build/ktlint-report-in-checkstyle-format.xml
       - uses: yutailang0119/action-ktlint@v2.0.0
         with:
-          xml_path: build/ktlint-report-in-checkstyle-format.xml
+          report-path: build/ktlint-report-in-checkstyle-format.xml
       - run: |
           if [[ $(xmllint --xpath "count(//file)" build/ktlint-report-in-checkstyle-format.xml) -gt 0 ]]; then
               exit 1;
