--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -318,6 +318,7 @@
             android:name=".feature.genericauth.otpinput.OtpInputActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".feature.claimdetail.ClaimDetailActivity" />
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
