--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -37,6 +37,7 @@ androidx-other-startup = "1.1.0"
 androidx-other-activityCompose = "1.3.1"
 androidx-test-core = "1.4.0"
 androidx-test-junit = "1.1.3"
+arrowKt = "1.0.1"
 assertK = "0.25"
 adyen = "4.2.0"
 coil = "1.4.0"
@@ -137,6 +138,8 @@ apollo-runtime = { module = "com.apollographql.apollo:apollo-runtime", version.r
 apollo-android = { module = "com.apollographql.apollo:apollo-android-support", version.ref = "apollo" }
 apollo-coroutines = { module = "com.apollographql.apollo:apollo-coroutines-support", version.ref = "apollo" }
 apollo-idlingResource = { module = "com.apollographql.apollo:apollo-idling-resource", version.ref = "apollo" }
+
+arrowKt-core = { module = "io.arrow-kt:arrow-core", version.ref = "arrowKt" }
 
 assertK = { module = "com.willowtreeapps.assertk:assertk-jvm", version.ref = "assertK" }
 
