Remove compose managed config changes until further updates
Context: https://kotlinlang.slack.com/archives/CJLTWPH7S/p1641818028165700?thread_ts=1641547722.054300&cid=CJLTWPH7S

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -318,9 +318,7 @@
             android:name=".feature.genericauth.otpinput.OtpInputActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize" />
-        <activity
-            android:name=".feature.claimdetail.ClaimDetailActivity"
-            android:configChanges="colorMode|density|fontScale|fontWeightAdjustment|keyboard|keyboardHidden|layoutDirection|locale|mcc|mnc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|touchscreen|uiMode" />
+        <activity android:name=".feature.claimdetail.ClaimDetailActivity" />
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
