--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,10 +7,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
+      - name: Setup JDK 11
+        uses: actions/setup-java@v2.5.0
         with:
-          java-version: 11
+          java-version: '11'
+          distribution: 'zulu'
+          cache: 'gradle'
       - name: Create Lokalise secret
         run: |
           cat <<EOT > lokalise.properties
@@ -84,6 +86,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Setup JDK 11
+        uses: actions/setup-java@v2.5.0
+        with:
+          java-version: '11'
+          distribution: 'zulu'
+          cache: 'gradle'
       - name: Create Lokalise secret
         run: |
           cat <<EOT > lokalise.properties
@@ -145,6 +153,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Setup JDK 11
+        uses: actions/setup-java@v2.5.0
+        with:
+          java-version: '11'
+          distribution: 'zulu'
+          cache: 'gradle'
       - name: Create Lokalise secret
         run: |
           cat <<EOT > lokalise.properties
