--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -215,9 +215,9 @@ jobs:
       - name: Generate License-report
         run: ./gradlew licenseReleaseReport
       - run: ./gradlew lintDebug
-      - uses: yutailang0119/action-android-lint@v1.0.2
+      - uses: yutailang0119/action-android-lint@v2.0.0
         with:
-          xml_path: app/build/reports/lint-results-debug.xml
+          report_path: app/build/reports/lint-results-debug.xml
   ktlint:
     runs-on: ubuntu-latest
     steps:
