Add activity result contract for DK address

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -313,6 +313,7 @@
 
         <activity android:name=".feature.embark.passages.externalinsurer.askforprice.AskForPriceInfoActivity" />
         <activity android:name=".feature.embark.passages.externalinsurer.retrieveprice.RetrievePriceInfoActivity" />
+        <activity android:name=".feature.addressautocompletion.ui.AddressAutoCompleteActivity" />
 
         <activity
             android:name=".feature.genericauth.otpinput.OtpInputActivity"
