--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,8 +20,8 @@ androidx-compose = "1.1.0-beta03"
 androidx-composeThemeAdapter = "1.0.4"
 androidx-datastore = "1.0.0"
 androidx-espresso = "3.4.0"
-androidx-lifecycle-common = "2.4.0-rc01"
-androidx-lifecycle-compose = "1.0.0-alpha07"
+androidx-lifecycle-common = "2.4.0"
+androidx-lifecycle-compose = "2.4.0"
 androidx-other-constraintLayout = "2.1.1"
 androidx-other-appCompat = "1.3.1"
 androidx-other-media = "1.4.2"
@@ -116,6 +116,7 @@ androidx-lifecycle-common = { module = "androidx.lifecycle:lifecycle-common-java
 androidx-lifecycle-liveData = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "androidx-lifecycle-common" }
 androidx-lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidx-lifecycle-common" }
 androidx-lifecycle-viewModel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "androidx-lifecycle-common" }
+androidx-lifecycle-viewModelSavedState = { module = "androidx.lifecycle:lifecycle-viewmodel-savedstate", version.ref = "androidx-lifecycle-common" }
 androidx-lifecycle-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidx-lifecycle-compose" }
 
 androidx-other-constraintLayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "androidx-other-constraintLayout" }
